--- a/pestim.tex
+++ b/pestim.tex
@@ -91,11 +91,11 @@ We also provide Windows binaries and Mac OS X binaries for this package that can
 	\item for Mac OS X binary package: \url{https://github.com/MobilePhoneESSnetBigData/Estimation_Population/blob/master/pestim_0.1.0.tgz}.
 \end{itemize}
 
-These binary packages can be downloaded and installed with the normal command:
+These binary packages can be downloaded and installed with the normal command, such as:
 \begin{verbatim}
 install.package("pestim_0.1.0.zip")
 \end{verbatim}
-but in this case the user should also install all the dependencies.
+for Windows but in this case the user should also install all the dependencies.
 
 \section{The hierarchical model}\label{model}
 
