new files added

--- a/pestim.tex
+++ b/pestim.tex
@@ -976,21 +976,21 @@ ggplot(relBias.Mode.df, aes(x = ' ', y = N)) + geom_boxplot() +
 
 \begin{figure}
 \centering
-%\includegraphics[scale=0.85]{many-cells-mean.eps}
+\includegraphics[scale=0.85]{many-cells-mean.eps}
 \caption{The distribution of the relative bias for the posterior mean.}
 \label{manycellsmean} 	
 \end{figure}
 
 \begin{figure}
 \centering
-%\includegraphics[scale=0.85]{many-cells-median.eps}
+\includegraphics[scale=0.85]{many-cells-median.eps}
 \caption{The distribution of the relative bias for the posterior median.}
 \label{manycellsmedian} 	
 \end{figure}
 
 \begin{figure}
 \centering
-%\includegraphics[scale=0.85]{many-cells-mdoe.eps}
+\includegraphics[scale=0.85]{many-cells-mdoe.eps}
 \caption{The distribution of the relative bias for the posterior mode.}
 \label{manycellssmode} 	
 \end{figure}
