new files added

--- a/pestim.tex
+++ b/pestim.tex
@@ -990,20 +990,19 @@ ggplot(relBias.Mode.df, aes(x = ' ', y = N)) + geom_boxplot() +
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.85]{many-cells-mdoe.eps}
+\includegraphics[scale=0.85]{many-cells-mode.eps}
 \caption{The distribution of the relative bias for the posterior mode.}
 \label{manycellssmode} 	
 \end{figure}
 
 
-The same combinations for distributions used for $f_{1}$ and $f_{2}$ can be done in the case of several cell like in
-the case of a single cell. Since this process is straightforward we will not show here each combination.
+The same combinations for distributions used for $f_{1}$ and $f_{2}$ can be done in the case of several cell like in the case of a single cell. Since this process is straightforward we will not show here each combination.
 
 
 \section{Estimates along a sequence of time}
 
 In this section we show how to extend the previous estimates along a sequence of time instants. 
-This process is represented in figure \ref{Tool2}.
+This process is represented schematically  in figure \ref{Tool2}.
 
 \begin{figure}[htbp]
 	\centering
